# ConvFPGA

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md
cmake/: genKernelTargets.cmake
host/: CMakeLists.txt
host/include/convfpga/: convfpga.h
host/src/: convfpga.c  convfpga_svm.c  convfpga_svm_batch.c  fpga_init.c  opencl_utils.c
kernels/: CMakeLists.txt  conv3D.cl  conv3D_svm.cl  conv3D_svm2.cl
kernels/common/: conv_config.h.in
kernels/fft/: fft_8.cl
scripts/power/: power_520N.sh  power_PACD5005.sh
src/: CMakeLists.txt  conv3D.cpp  conv3D.hpp  fft_conv3D.cpp  fft_conv3D.hpp  helper.cpp  helper.hpp  main.cpp
tests/: CMakeLists.txt  test_conv3D.cpp  test_main.cpp
